--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gl-react-contrast-saturation-brightness": "^1.2.0",
     "gl-react-hue-rotate": "^1.2.0",
     "gl-react-negative": "^1.1.0",
-    "gl-react-sepia": "^1.0.3",
+    "gl-react-sepia": "git://github.com/stoffern/gl-react-sepia.git#780a5f9f6cc37bce617b669dd25bf4a5704bd88c",
     "gl-react-sharpen": "^1.0.2",
     "gl-react-temperature": "^1.0.1",
     "prop-types": "^15.6.0"
